Add keymap gravaTela to hypr config

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -232,6 +232,7 @@ bind=,Print,exec,grim -g "$(slurp)" /home/cadu/captura/captura-`date +%Y-%m-%d_%
 # take a screenshot and copy to clipboard
 bind= SHIFT, Print, exec, grim -g "$(slurp)" - | wl-copy && dunstify "Copiando..." "Imagem salva na área de transferência" -i camera-photo-symbolic.symbolic --urgency=normal
 
+bind = , XF86Favorites, exec, wofi-pass
 # Exit 
 bind=$mainMod,X,submap,sair
 
@@ -258,5 +259,31 @@ binde=,down,resizeactive,0 10
 bind=,escape,submap,reset 
 
 submap=reset 
+
+# Gravar tela
+
+bind = $mainMod SHIFT, G, submap, gravarTela
+
+submap = gravarTela
+
+bind = , G, exec, wf-recorder --audio --file=gravacoes/video-`date +%Y-%m-%d_%H-%M-%S`.mp4 
+bind = , Q, exec, wf-recorder -g "$(slurp)" --file=gravacoes/video-`date +%Y-%m-%d_%H-%M-%S`.mp4 
+bind = , P, exec, pkill --signal=SIGINT wf-recorder
+bind = , S, exec, wf-recorder --file=gravacoes/video-`date +%Y-%m-%d_%H-%M-%S`.mp4
+
+bind = , escape, submap, reset
+
+submap=reset
+
+# set $gravarTela gravar: [g]ravar, [q]parte, [p]arar, [s]emSom
+#     mode "$gravarTela" {
+#         bindsym g exec wf-recorder --audio --file=gravacoes/video-`date +%Y-%m-%d_%H-%M-%S`.mp4
+#         bindsym q exec wf-recorder -g "$(slurp)" --file=gravacoes/video-`date +%Y-%m-%d_%H-%M-%S`.mp4
+#         bindsym p exec pkill --signal=SIGINT wf-recorder
+#         bindsym s exec wf-recorder --file=gravacoes/video-`date +%Y-%m-%d_%H-%M-%S`.mp4
+#         bindsym Escape mode "default"
+#         bindsym Return mode "default"
+#     }
+#     bindsym $mod+g mode "$gravarTela"
 
 exec=$HOME/.local/bin/cleanup_after_start.sh
