Atualiza diversas configs

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -4,7 +4,7 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 #monitor=,preferred,auto,1
 monitor=HDMI-A-2,1920x1080@60,0x0,1
-wsbind=5,HDMI-A-2
+#wsbind=5,HDMI-A-2
 
 monitor=eDP-1,1366x768@60.002998,1920x188,1
 wsbind=1,eDP-1
@@ -23,6 +23,7 @@ exec-once = wl-paste -t text --watch clipman store
 exec-once = megasync
 exec-once = eww --config .config/eww daemon
 exec-once = eww --config .config/eww open bar
+exec-once = $HOME/.local/bin/bateriaCritica.sh
 
 # Habilita o menu de desligamento
 exec-once = $HOME/.local/bin/menuSair.sh
@@ -67,6 +68,8 @@ general {
 
     layout = dwindle
 }
+
+
 
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
@@ -121,6 +124,8 @@ device:epic mouse V1 {
 
 misc {
     mouse_move_enables_dpms = true
+    key_press_enables_dpms = true
+    disable_autoreload = true
 }
 
 # Example windowrule v1
@@ -132,10 +137,10 @@ windowrulev2 = float, title: ^(Plot Zoom)$
 windowrulev2 = float, class: ^(file-roller)$
 #windowrulev2 = float, title: ^(Firefox - Indicador de compartilhamento)$
 #windowrulev2 = float, title:Firefox - Indicador de compartilhamento
-windowrulev2 = float, title:.*(Indicador de compartilhamento)$
-windowrulev2 = float, title: ^(.*Tramitação.*)$
-windowrulev2 = float, title: ^(Nova nota de texto — Okular)$
-windowrulev2 = float, title: ^(.*Importação de texto.*)$
+windowrulev2 = float, class:firefox,title:.*(Indicador de compartilhamento)$
+windowrulev2 = float, class:firefox,title:^(.*Tramitação.*)$
+windowrulev2 = float, class:firefox,title:^(Nova nota de texto — Okular)$
+windowrulev2 = float, class:firefox,title:^(.*Importação de texto.*)$
 windowrulev2 = float, class:pavucontrol
 windowrulev2 = size 654 540, class:pavucontrol
 windowrulev2 = float, title:ImportPhotos
@@ -144,8 +149,16 @@ windowrulev2 = move center, class:blueman-manager
 windowrulev2 = float, title:Abrir a Pasta
 windowrulev2 = float, title:rofi - dmenu
 windowrulev2 = float, title:Abrir o Arquivo
-windowrulev2 = workspace special:megasync silent,class:nz.co.mega.megasync
+#windowrulev2 = workspace special:megasync silent,class:nz.co.mega.megasync
+windowrulev2 = float, class: nz.co.mega.megasync
+# Float janelas pcmanfm
 windowrulev2 = float, class:wdisplays
+windowrulev2 = float, title: Transferencia de Arquivo Bluetooth
+windowrulev2 = float, title: Confirme para substituir os arquivos
+windowrulev2 = float, title: Mover arquivos
+windowrulev2 = float, title: Deletar Arquivos
+windowrulev2 = size 800 600, class:mpv
+windowrulev2 = float, class: com.github.wwmm.easyeffects
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
@@ -204,7 +217,7 @@ bind = $mainMod, W, fullscreen, 0
 
 # Special workspace (scratchpad)
 bind=$mainMod,A,togglespecialworkspace,mensageiros
-bind=$mainMod,M,togglespecialworkspace,megasync
+#bind=$mainMod,M,togglespecialworkspace,megasync
 bind=$mainMod SHIFT,minus,movetoworkspace,padrao
 bind=$mainMod,minus,togglespecialworkspace,padrao
 
@@ -266,24 +279,13 @@ bind = $mainMod SHIFT, G, submap, gravarTela
 
 submap = gravarTela
 
-bind = , G, exec, wf-recorder --audio --file=gravacoes/video-`date +%Y-%m-%d_%H-%M-%S`.mp4 
-bind = , Q, exec, wf-recorder -g "$(slurp)" --file=gravacoes/video-`date +%Y-%m-%d_%H-%M-%S`.mp4 
+bind = , G, exec, wf-recorder --audio --file=gravacoes/captura-`date +%Y-%m-%d_%H-%M-%S`.mp4 --codec libx264 --force-yuv --pixel-format yuv420p --bframes 2 
+bind = , Q, exec, wf-recorder -g "$(slurp)" --file=gravacoes/captura-`date +%Y-%m-%d_%H-%M-%S`.mp4 --codec libx264 --force-yuv --pixel-format yuv420p --bframes 2
 bind = , P, exec, pkill --signal=SIGINT wf-recorder
-bind = , S, exec, wf-recorder --file=gravacoes/video-`date +%Y-%m-%d_%H-%M-%S`.mp4
-
+bind = , S, exec, wf-recorder --file=gravacoes/captura-`date +%Y-%m-% --codec libx264 --force-yuv --pixel-format yuv420p --bframes 2
 bind = , escape, submap, reset
 
 submap=reset
 
-# set $gravarTela gravar: [g]ravar, [q]parte, [p]arar, [s]emSom
-#     mode "$gravarTela" {
-#         bindsym g exec wf-recorder --audio --file=gravacoes/video-`date +%Y-%m-%d_%H-%M-%S`.mp4
-#         bindsym q exec wf-recorder -g "$(slurp)" --file=gravacoes/video-`date +%Y-%m-%d_%H-%M-%S`.mp4
-#         bindsym p exec pkill --signal=SIGINT wf-recorder
-#         bindsym s exec wf-recorder --file=gravacoes/video-`date +%Y-%m-%d_%H-%M-%S`.mp4
-#         bindsym Escape mode "default"
-#         bindsym Return mode "default"
-#     }
-#     bindsym $mod+g mode "$gravarTela"
-
+# Limpa a regra dos mensageirosFF, linha 32
 exec=$HOME/.local/bin/cleanup_after_start.sh
